[package]
name = "clutils"
version = "0.0.8"
edition = "2021"
authors = ["Thepigcat76 <benpospo@gmail.com>"]
categories = ["Compilers", "Utilities"]
description = "A common library for building interpreter and compiler"
repository = "https://github.com/Isible/clu"
readme = "README.md"
keywords = ["compiler", "util"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
